post list y details post

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ REACT_APP_KEY=620fdb656c0669e254d27427
 #urls
 
 REACT_APP_URL_ALL_USER='https://dummyapi.io/data/v1/user?limit=10'
+REACT_APP_URL_ALL_POST='https://dummyapi.io/data/v1/post?limit=10'
+
