--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "firebase": "^9.6.7",
     "install": "^0.13.0",
     "npm": "^8.3.2",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-with-firebase-auth": "^1.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
